reference_vm/parser.out
Created by PLY version 3.0 (http://www.dabeaz.com/ply)

Grammar

Rule 1     S' -> goal
Rule 2     goal -> stmtlist
Rule 3     stmtlist -> stmtrest statement
Rule 4     stmtrest -> stmtrest statement
Rule 5     stmtrest -> epsilon
Rule 6     statement -> assign
Rule 7     statement -> expression SEP
Rule 8     assign -> varassign SEP
Rule 9     assign -> funcassign
Rule 10    varassign -> typedecl ID ASSIGN_OP expression
Rule 11    funcassign -> typedecl ID ASSIGN_OP FUNCTION LPAREN paramlist pushToSymTable RPAREN LBRACE stmtrest RETURN expression SEP RBRACE
Rule 12    pushToSymTable -> epsilon
Rule 13    paramlist -> typedecl ID paramrest
Rule 14    paramlist -> epsilon
Rule 15    paramrest -> paramrest COMMA typedecl ID
Rule 16    paramrest -> epsilon
Rule 17    expression -> expression ADD_OP expression
Rule 18    expression -> expression SUBTRACT_OP expression
Rule 19    expression -> expression MULTIPLY_OP expression
Rule 20    expression -> expression DIVIDE_OP expression
Rule 21    expression -> expression MODULO_OP expression
Rule 22    expression -> expression EQ_OP expression
Rule 23    expression -> expression NE_OP expression
Rule 24    expression -> expression GT_OP expression
Rule 25    expression -> expression GE_OP expression
Rule 26    expression -> expression LT_OP expression
Rule 27    expression -> expression LE_OP expression
Rule 28    expression -> expression LOGAND_OP expression
Rule 29    expression -> expression LOGOR_OP expression
Rule 30    expression -> expression TILDE_OP expression
Rule 31    expression -> SUBTRACT_OP expression
Rule 32    expression -> LOGNOT_OP expression
Rule 33    expression -> ARRAY_LENGTH LPAREN ID RPAREN
Rule 34    expression -> INT LPAREN expression RPAREN
Rule 35    expression -> FLOAT LPAREN expression RPAREN
Rule 36    expression -> STRING LPAREN expression RPAREN
Rule 37    expression -> expression QUESTION_OP expression COLON_OP expression
Rule 38    expression -> LPAREN expression RPAREN
Rule 39    expression -> scalarvalue
Rule 40    expression -> arrayvalues
Rule 41    expression -> ID subscript
Rule 42    subscript -> LBRACK expression RBRACK
Rule 43    subscript -> epsilon
Rule 44    expression -> ID LPAREN arglist RPAREN
Rule 45    arglist -> expression argrest
Rule 46    arglist -> epsilon
Rule 47    argrest -> argrest COMMA expression
Rule 48    argrest -> epsilon
Rule 49    scalarvalue -> FLOATNUMBER
Rule 50    scalarvalue -> INTNUMBER
Rule 51    scalarvalue -> STRINGCONSTANT
Rule 52    arrayvalues -> LBRACK arrayelements RBRACK
Rule 53    arrayelements -> expression moreelements
Rule 54    arrayelements -> epsilon
Rule 55    moreelements -> COMMA expression moreelements
Rule 56    moreelements -> epsilon
Rule 57    typedecl -> INT arraydecl
Rule 58    typedecl -> FLOAT arraydecl
Rule 59    typedecl -> STRING arraydecl
Rule 60    arraydecl -> LBRACK RBRACK
Rule 61    arraydecl -> epsilon
Rule 62    epsilon -> <empty>

Terminals, with rules where they appear

ADD_OP               : 16
ARRAY_LENGTH         : 32
ASSIGN_OP            : 9 10
COLON_OP             : 36
COMMA                : 14 46 54
DIVIDE_OP            : 19
EQ_OP                : 21
FLOAT                : 34 57
FLOATNUMBER          : 48
FUNCTION             : 10
GE_OP                : 24
GT_OP                : 23
ID                   : 9 10 12 14 32 40 43
INT                  : 33 56
INTNUMBER            : 49
LBRACE               : 10
LBRACK               : 41 51 59
LE_OP                : 26
LOGAND_OP            : 27
LOGNOT_OP            : 31
LOGOR_OP             : 28
LPAREN               : 10 32 33 34 35 37 43
LT_OP                : 25
MODULO_OP            : 20
MULTIPLY_OP          : 18
NE_OP                : 22
QUESTION_OP          : 36
RBRACE               : 10
RBRACK               : 41 51 59
RETURN               : 10
RPAREN               : 10 32 33 34 35 37 43
SEP                  : 6 7 10
STRING               : 35 58
STRINGCONSTANT       : 50
SUBTRACT_OP          : 17 30
TILDE_OP             : 29
error                : 

Nonterminals, with rules where they appear

arglist              : 43
argrest              : 44 46
arraydecl            : 56 57 58
arrayelements        : 51
arrayvalues          : 39
assign               : 5
epsilon              : 4 11 13 15 42 45 47 53 55 60
expression           : 6 9 10 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 33 34 35 36 36 36 37 41 44 46 52 54
funcassign           : 8
goal                 : 0
moreelements         : 52 54
paramlist            : 10
paramrest            : 12 14
pushToSymTable       : 10
scalarvalue          : 38
statement            : 2 3
stmtlist             : 1
stmtrest             : 2 3 10
subscript            : 40
typedecl             : 9 10 12 14
varassign            : 7

Parsing method: LALR

state 0

    (0) S' -> . goal
    (1) goal -> . stmtlist
    (2) stmtlist -> . stmtrest statement
    (3) stmtrest -> . stmtrest statement
    (4) stmtrest -> . epsilon
    (61) epsilon -> .

    SUBTRACT_OP     reduce using rule 61 (epsilon -> .)
    LOGNOT_OP       reduce using rule 61 (epsilon -> .)
    ARRAY_LENGTH    reduce using rule 61 (epsilon -> .)
    INT             reduce using rule 61 (epsilon -> .)
    FLOAT           reduce using rule 61 (epsilon -> .)
    STRING          reduce using rule 61 (epsilon -> .)
    LPAREN          reduce using rule 61 (epsilon -> .)
    ID              reduce using rule 61 (epsilon -> .)
    FLOATNUMBER     reduce using rule 61 (epsilon -> .)
    INTNUMBER       reduce using rule 61 (epsilon -> .)
    STRINGCONSTANT  reduce using rule 61 (epsilon -> .)
    LBRACK          reduce using rule 61 (epsilon -> .)

    epsilon                        shift and go to state 1
    stmtrest                       shift and go to state 2
    goal                           shift and go to state 3
    stmtlist                       shift and go to state 4

state 1

    (4) stmtrest -> epsilon .

    SUBTRACT_OP     reduce using rule 4 (stmtrest -> epsilon .)
    LOGNOT_OP       reduce using rule 4 (stmtrest -> epsilon .)
    ARRAY_LENGTH    reduce using rule 4 (stmtrest -> epsilon .)
    INT             reduce using rule 4 (stmtrest -> epsilon .)
    FLOAT           reduce using rule 4 (stmtrest -> epsilon .)
    STRING          reduce using rule 4 (stmtrest -> epsilon .)
    LPAREN          reduce using rule 4 (stmtrest -> epsilon .)
    ID              reduce using rule 4 (stmtrest -> epsilon .)
    FLOATNUMBER     reduce using rule 4 (stmtrest -> epsilon .)
    INTNUMBER       reduce using rule 4 (stmtrest -> epsilon .)
    STRINGCONSTANT  reduce using rule 4 (stmtrest -> epsilon .)
    LBRACK          reduce using rule 4 (stmtrest -> epsilon .)
    RETURN          reduce using rule 4 (stmtrest -> epsilon .)


state 2

    (2) stmtlist -> stmtrest . statement
    (3) stmtrest -> stmtrest . statement
    (5) statement -> . assign
    (6) statement -> . expression SEP
    (7) assign -> . varassign SEP
    (8) assign -> . funcassign
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . ARRAY_LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . ID LPAREN arglist RPAREN
    (9) varassign -> . typedecl ID ASSIGN_OP expression
    (10) funcassign -> . typedecl ID ASSIGN_OP FUNCTION LPAREN paramlist pushToSymTable RPAREN LBRACE stmtrest RETURN expression SEP RBRACE
    (48) scalarvalue -> . FLOATNUMBER
    (49) scalarvalue -> . INTNUMBER
    (50) scalarvalue -> . STRINGCONSTANT
    (51) arrayvalues -> . LBRACK arrayelements RBRACK
    (56) typedecl -> . INT arraydecl
    (57) typedecl -> . FLOAT arraydecl
    (58) typedecl -> . STRING arraydecl

    SUBTRACT_OP     shift and go to state 7
    LOGNOT_OP       shift and go to state 17
    ARRAY_LENGTH    shift and go to state 8
    INT             shift and go to state 12
    FLOAT           shift and go to state 19
    STRING          shift and go to state 13
    LPAREN          shift and go to state 14
    ID              shift and go to state 15
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 9
    STRINGCONSTANT  shift and go to state 6
    LBRACK          shift and go to state 20

    typedecl                       shift and go to state 21
    scalarvalue                    shift and go to state 18
    varassign                      shift and go to state 22
    statement                      shift and go to state 10
    arrayvalues                    shift and go to state 11
    expression                     shift and go to state 23
    assign                         shift and go to state 24
    funcassign                     shift and go to state 16

state 3

    (0) S' -> goal .



state 4

    (1) goal -> stmtlist .

    $end            reduce using rule 1 (goal -> stmtlist .)


state 5

    (48) scalarvalue -> FLOATNUMBER .

    ADD_OP          reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    SUBTRACT_OP     reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    MULTIPLY_OP     reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    DIVIDE_OP       reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    MODULO_OP       reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    EQ_OP           reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    NE_OP           reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    GT_OP           reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    GE_OP           reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    LT_OP           reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    LE_OP           reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    LOGAND_OP       reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    LOGOR_OP        reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    TILDE_OP        reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    QUESTION_OP     reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    SEP             reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    RPAREN          reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    COMMA           reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    RBRACK          reduce using rule 48 (scalarvalue -> FLOATNUMBER .)
    COLON_OP        reduce using rule 48 (scalarvalue -> FLOATNUMBER .)


state 6

    (50) scalarvalue -> STRINGCONSTANT .

    ADD_OP          reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    SUBTRACT_OP     reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    MULTIPLY_OP     reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    DIVIDE_OP       reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    MODULO_OP       reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    EQ_OP           reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    NE_OP           reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    GT_OP           reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    GE_OP           reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    LT_OP           reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    LE_OP           reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    LOGAND_OP       reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    LOGOR_OP        reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    TILDE_OP        reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    QUESTION_OP     reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    SEP             reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    RPAREN          reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    COMMA           reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    RBRACK          reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)
    COLON_OP        reduce using rule 50 (scalarvalue -> STRINGCONSTANT .)


state 7

    (30) expression -> SUBTRACT_OP . expression
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . ARRAY_LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . ID LPAREN arglist RPAREN
    (48) scalarvalue -> . FLOATNUMBER
    (49) scalarvalue -> . INTNUMBER
    (50) scalarvalue -> . STRINGCONSTANT
    (51) arrayvalues -> . LBRACK arrayelements RBRACK

    SUBTRACT_OP     shift and go to state 7
    LOGNOT_OP       shift and go to state 17
    ARRAY_LENGTH    shift and go to state 8
    INT             shift and go to state 27
    FLOAT           shift and go to state 26
    STRING          shift and go to state 25
    LPAREN          shift and go to state 14
    ID              shift and go to state 15
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 9
    STRINGCONSTANT  shift and go to state 6
    LBRACK          shift and go to state 20

    expression                     shift and go to state 28
    arrayvalues                    shift and go to state 11
    scalarvalue                    shift and go to state 18

state 8

    (32) expression -> ARRAY_LENGTH . LPAREN ID RPAREN

    LPAREN          shift and go to state 29


state 9

    (49) scalarvalue -> INTNUMBER .

    ADD_OP          reduce using rule 49 (scalarvalue -> INTNUMBER .)
    SUBTRACT_OP     reduce using rule 49 (scalarvalue -> INTNUMBER .)
    MULTIPLY_OP     reduce using rule 49 (scalarvalue -> INTNUMBER .)
    DIVIDE_OP       reduce using rule 49 (scalarvalue -> INTNUMBER .)
    MODULO_OP       reduce using rule 49 (scalarvalue -> INTNUMBER .)
    EQ_OP           reduce using rule 49 (scalarvalue -> INTNUMBER .)
    NE_OP           reduce using rule 49 (scalarvalue -> INTNUMBER .)
    GT_OP           reduce using rule 49 (scalarvalue -> INTNUMBER .)
    GE_OP           reduce using rule 49 (scalarvalue -> INTNUMBER .)
    LT_OP           reduce using rule 49 (scalarvalue -> INTNUMBER .)
    LE_OP           reduce using rule 49 (scalarvalue -> INTNUMBER .)
    LOGAND_OP       reduce using rule 49 (scalarvalue -> INTNUMBER .)
    LOGOR_OP        reduce using rule 49 (scalarvalue -> INTNUMBER .)
    TILDE_OP        reduce using rule 49 (scalarvalue -> INTNUMBER .)
    QUESTION_OP     reduce using rule 49 (scalarvalue -> INTNUMBER .)
    SEP             reduce using rule 49 (scalarvalue -> INTNUMBER .)
    RPAREN          reduce using rule 49 (scalarvalue -> INTNUMBER .)
    COMMA           reduce using rule 49 (scalarvalue -> INTNUMBER .)
    RBRACK          reduce using rule 49 (scalarvalue -> INTNUMBER .)
    COLON_OP        reduce using rule 49 (scalarvalue -> INTNUMBER .)


state 10

    (2) stmtlist -> stmtrest statement .
    (3) stmtrest -> stmtrest statement .

    $end            reduce using rule 2 (stmtlist -> stmtrest statement .)
    SUBTRACT_OP     reduce using rule 3 (stmtrest -> stmtrest statement .)
    LOGNOT_OP       reduce using rule 3 (stmtrest -> stmtrest statement .)
    ARRAY_LENGTH    reduce using rule 3 (stmtrest -> stmtrest statement .)
    INT             reduce using rule 3 (stmtrest -> stmtrest statement .)
    FLOAT           reduce using rule 3 (stmtrest -> stmtrest statement .)
    STRING          reduce using rule 3 (stmtrest -> stmtrest statement .)
    LPAREN          reduce using rule 3 (stmtrest -> stmtrest statement .)
    ID              reduce using rule 3 (stmtrest -> stmtrest statement .)
    FLOATNUMBER     reduce using rule 3 (stmtrest -> stmtrest statement .)
    INTNUMBER       reduce using rule 3 (stmtrest -> stmtrest statement .)
    STRINGCONSTANT  reduce using rule 3 (stmtrest -> stmtrest statement .)
    LBRACK          reduce using rule 3 (stmtrest -> stmtrest statement .)


state 11

    (39) expression -> arrayvalues .

    COLON_OP        reduce using rule 39 (expression -> arrayvalues .)
    ADD_OP          reduce using rule 39 (expression -> arrayvalues .)
    SUBTRACT_OP     reduce using rule 39 (expression -> arrayvalues .)
    MULTIPLY_OP     reduce using rule 39 (expression -> arrayvalues .)
    DIVIDE_OP       reduce using rule 39 (expression -> arrayvalues .)
    MODULO_OP       reduce using rule 39 (expression -> arrayvalues .)
    EQ_OP           reduce using rule 39 (expression -> arrayvalues .)
    NE_OP           reduce using rule 39 (expression -> arrayvalues .)
    GT_OP           reduce using rule 39 (expression -> arrayvalues .)
    GE_OP           reduce using rule 39 (expression -> arrayvalues .)
    LT_OP           reduce using rule 39 (expression -> arrayvalues .)
    LE_OP           reduce using rule 39 (expression -> arrayvalues .)
    LOGAND_OP       reduce using rule 39 (expression -> arrayvalues .)
    LOGOR_OP        reduce using rule 39 (expression -> arrayvalues .)
    TILDE_OP        reduce using rule 39 (expression -> arrayvalues .)
    QUESTION_OP     reduce using rule 39 (expression -> arrayvalues .)
    COMMA           reduce using rule 39 (expression -> arrayvalues .)
    RPAREN          reduce using rule 39 (expression -> arrayvalues .)
    SEP             reduce using rule 39 (expression -> arrayvalues .)
    RBRACK          reduce using rule 39 (expression -> arrayvalues .)


state 12

    (33) expression -> INT . LPAREN expression RPAREN
    (56) typedecl -> INT . arraydecl
    (59) arraydecl -> . LBRACK RBRACK
    (60) arraydecl -> . epsilon
    (61) epsilon -> .

    LPAREN          shift and go to state 32
    LBRACK          shift and go to state 31
    ID              reduce using rule 61 (epsilon -> .)

    epsilon                        shift and go to state 30
    arraydecl                      shift and go to state 33

state 13

    (35) expression -> STRING . LPAREN expression RPAREN
    (58) typedecl -> STRING . arraydecl
    (59) arraydecl -> . LBRACK RBRACK
    (60) arraydecl -> . epsilon
    (61) epsilon -> .

    LPAREN          shift and go to state 34
    LBRACK          shift and go to state 31
    ID              reduce using rule 61 (epsilon -> .)

    epsilon                        shift and go to state 30
    arraydecl                      shift and go to state 35

state 14

    (37) expression -> LPAREN . expression RPAREN
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . ARRAY_LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . ID LPAREN arglist RPAREN
    (48) scalarvalue -> . FLOATNUMBER
    (49) scalarvalue -> . INTNUMBER
    (50) scalarvalue -> . STRINGCONSTANT
    (51) arrayvalues -> . LBRACK arrayelements RBRACK

    SUBTRACT_OP     shift and go to state 7
    LOGNOT_OP       shift and go to state 17
    ARRAY_LENGTH    shift and go to state 8
    INT             shift and go to state 27
    FLOAT           shift and go to state 26
    STRING          shift and go to state 25
    LPAREN          shift and go to state 14
    ID              shift and go to state 15
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 9
    STRINGCONSTANT  shift and go to state 6
    LBRACK          shift and go to state 20

    expression                     shift and go to state 36
    arrayvalues                    shift and go to state 11
    scalarvalue                    shift and go to state 18

state 15

    (40) expression -> ID . subscript
    (43) expression -> ID . LPAREN arglist RPAREN
    (41) subscript -> . LBRACK expression RBRACK
    (42) subscript -> . epsilon
    (61) epsilon -> .

    LPAREN          shift and go to state 39
    LBRACK          shift and go to state 38
    SEP             reduce using rule 61 (epsilon -> .)
    ADD_OP          reduce using rule 61 (epsilon -> .)
    SUBTRACT_OP     reduce using rule 61 (epsilon -> .)
    MULTIPLY_OP     reduce using rule 61 (epsilon -> .)
    DIVIDE_OP       reduce using rule 61 (epsilon -> .)
    MODULO_OP       reduce using rule 61 (epsilon -> .)
    EQ_OP           reduce using rule 61 (epsilon -> .)
    NE_OP           reduce using rule 61 (epsilon -> .)
    GT_OP           reduce using rule 61 (epsilon -> .)
    GE_OP           reduce using rule 61 (epsilon -> .)
    LT_OP           reduce using rule 61 (epsilon -> .)
    LE_OP           reduce using rule 61 (epsilon -> .)
    LOGAND_OP       reduce using rule 61 (epsilon -> .)
    LOGOR_OP        reduce using rule 61 (epsilon -> .)
    TILDE_OP        reduce using rule 61 (epsilon -> .)
    QUESTION_OP     reduce using rule 61 (epsilon -> .)
    RPAREN          reduce using rule 61 (epsilon -> .)
    COMMA           reduce using rule 61 (epsilon -> .)
    RBRACK          reduce using rule 61 (epsilon -> .)
    COLON_OP        reduce using rule 61 (epsilon -> .)

    epsilon                        shift and go to state 37
    subscript                      shift and go to state 40

state 16

    (8) assign -> funcassign .

    RETURN          reduce using rule 8 (assign -> funcassign .)
    SUBTRACT_OP     reduce using rule 8 (assign -> funcassign .)
    LOGNOT_OP       reduce using rule 8 (assign -> funcassign .)
    ARRAY_LENGTH    reduce using rule 8 (assign -> funcassign .)
    INT             reduce using rule 8 (assign -> funcassign .)
    FLOAT           reduce using rule 8 (assign -> funcassign .)
    STRING          reduce using rule 8 (assign -> funcassign .)
    LPAREN          reduce using rule 8 (assign -> funcassign .)
    ID              reduce using rule 8 (assign -> funcassign .)
    FLOATNUMBER     reduce using rule 8 (assign -> funcassign .)
    INTNUMBER       reduce using rule 8 (assign -> funcassign .)
    STRINGCONSTANT  reduce using rule 8 (assign -> funcassign .)
    LBRACK          reduce using rule 8 (assign -> funcassign .)
    $end            reduce using rule 8 (assign -> funcassign .)


state 17

    (31) expression -> LOGNOT_OP . expression
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . ARRAY_LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . ID LPAREN arglist RPAREN
    (48) scalarvalue -> . FLOATNUMBER
    (49) scalarvalue -> . INTNUMBER
    (50) scalarvalue -> . STRINGCONSTANT
    (51) arrayvalues -> . LBRACK arrayelements RBRACK

    SUBTRACT_OP     shift and go to state 7
    LOGNOT_OP       shift and go to state 17
    ARRAY_LENGTH    shift and go to state 8
    INT             shift and go to state 27
    FLOAT           shift and go to state 26
    STRING          shift and go to state 25
    LPAREN          shift and go to state 14
    ID              shift and go to state 15
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 9
    STRINGCONSTANT  shift and go to state 6
    LBRACK          shift and go to state 20

    expression                     shift and go to state 41
    arrayvalues                    shift and go to state 11
    scalarvalue                    shift and go to state 18

state 18

    (38) expression -> scalarvalue .

    COLON_OP        reduce using rule 38 (expression -> scalarvalue .)
    ADD_OP          reduce using rule 38 (expression -> scalarvalue .)
    SUBTRACT_OP     reduce using rule 38 (expression -> scalarvalue .)
    MULTIPLY_OP     reduce using rule 38 (expression -> scalarvalue .)
    DIVIDE_OP       reduce using rule 38 (expression -> scalarvalue .)
    MODULO_OP       reduce using rule 38 (expression -> scalarvalue .)
    EQ_OP           reduce using rule 38 (expression -> scalarvalue .)
    NE_OP           reduce using rule 38 (expression -> scalarvalue .)
    GT_OP           reduce using rule 38 (expression -> scalarvalue .)
    GE_OP           reduce using rule 38 (expression -> scalarvalue .)
    LT_OP           reduce using rule 38 (expression -> scalarvalue .)
    LE_OP           reduce using rule 38 (expression -> scalarvalue .)
    LOGAND_OP       reduce using rule 38 (expression -> scalarvalue .)
    LOGOR_OP        reduce using rule 38 (expression -> scalarvalue .)
    TILDE_OP        reduce using rule 38 (expression -> scalarvalue .)
    QUESTION_OP     reduce using rule 38 (expression -> scalarvalue .)
    COMMA           reduce using rule 38 (expression -> scalarvalue .)
    RPAREN          reduce using rule 38 (expression -> scalarvalue .)
    SEP             reduce using rule 38 (expression -> scalarvalue .)
    RBRACK          reduce using rule 38 (expression -> scalarvalue .)


state 19

    (34) expression -> FLOAT . LPAREN expression RPAREN
    (57) typedecl -> FLOAT . arraydecl
    (59) arraydecl -> . LBRACK RBRACK
    (60) arraydecl -> . epsilon
    (61) epsilon -> .

    LPAREN          shift and go to state 42
    LBRACK          shift and go to state 31
    ID              reduce using rule 61 (epsilon -> .)

    epsilon                        shift and go to state 30
    arraydecl                      shift and go to state 43

state 20

    (51) arrayvalues -> LBRACK . arrayelements RBRACK
    (52) arrayelements -> . expression moreelements
    (53) arrayelements -> . epsilon
    (16) expression -> . expression ADD_OP expression
    (17) expression -> . expression SUBTRACT_OP expression
    (18) expression -> . expression MULTIPLY_OP expression
    (19) expression -> . expression DIVIDE_OP expression
    (20) expression -> . expression MODULO_OP expression
    (21) expression -> . expression EQ_OP expression
    (22) expression -> . expression NE_OP expression
    (23) expression -> . expression GT_OP expression
    (24) expression -> . expression GE_OP expression
    (25) expression -> . expression LT_OP expression
    (26) expression -> . expression LE_OP expression
    (27) expression -> . expression LOGAND_OP expression
    (28) expression -> . expression LOGOR_OP expression
    (29) expression -> . expression TILDE_OP expression
    (30) expression -> . SUBTRACT_OP expression
    (31) expression -> . LOGNOT_OP expression
    (32) expression -> . ARRAY_LENGTH LPAREN ID RPAREN
    (33) expression -> . INT LPAREN expression RPAREN
    (34) expression -> . FLOAT LPAREN expression RPAREN
    (35) expression -> . STRING LPAREN expression RPAREN
    (36) expression -> . expression QUESTION_OP expression COLON_OP expression
    (37) expression -> . LPAREN expression RPAREN
    (38) expression -> . scalarvalue
    (39) expression -> . arrayvalues
    (40) expression -> . ID subscript
    (43) expression -> . ID LPAREN arglist RPAREN
    (61) epsilon -> .
    (48) scalarvalue -> . FLOATNUMBER
    (49) scalarvalue -> . INTNUMBER
    (50) scalarvalue -> . STRINGCONSTANT
    (51) arrayvalues -> . LBRACK arrayelements RBRACK

    SUBTRACT_OP     shift and go to state 7
    LOGNOT_OP       shift and go to state 17
    ARRAY_LENGTH    shift and go to state 8
    INT             shift and go to state 27
    FLOAT           shift and go to state 26
    STRING          shift and go to state 25
    LPAREN          shift and go to state 14
    ID              shift and go to state 15
    RBRACK          reduce using rule 61 (epsilon -> .)
    FLOATNUMBER     shift and go to state 5
    INTNUMBER       shift and go to state 9
    STRINGCONSTANT  shift and go to state 6
    LBRACK          shift and go to state 20

    scalarvalue                    shift and go to state 18
    arrayelements                  shift and go to state 45
    epsilon                        shift and go to state 44
    arrayvalues                    shift and go to state 11
    expression                     shift and go to state 46

state 21

    (9) varassign -> typedecl . ID ASSIGN_OP expression
    (10) funcassign -> typedecl . ID ASSIGN_OP FUNCTION LPAREN paramlist pushToSymTable RPAREN LBRACE stmtrest RETURN expression SEP RBRACE

    ID              shift and go to state 47


state 22

    (7) assign -> varassign . SEP

    SEP             shift and go to state 48


state 23

    (6) statement -> expression . SEP
    (16) expression -> expression . ADD_OP expression
    (17) expression -> expression . SUBTRACT_OP expression
    (18) expression -> expression . MULTIPLY_OP expression
    (19) expression -> expression . DIVIDE_OP expression
    (20) expression -> expression . MODULO_OP expression
    (21) expression -> expression . EQ_OP expression
    (22) expression -> expression . NE_OP expression
    (23) expression -> expression . GT_OP expression
    (24) expression -> expression . GE_OP expression
    (25) expression -> expression . LT_OP expression
    (26) expression -> expression . LE_OP expression
    (27) expression -> expression . LOGAND_OP expression
    (28) expression -> expression . LOGOR_OP expression
    (29) expression -> expression . TILDE_OP expression
    (36) expression -> expression . QUESTION_OP expression COLON_OP expression
